change AssignedTo to multiple users, fix CreatedBy & UpdatedBy
