# docs/swagger.yaml
@@ -89,6 +89,10 @@ definitions:
     type: object
   dtos.UpdateTodoRequest:
     properties:
+      assignedTo:
+        type: integer
+      categoryId:
+        type: integer
       description:
         type: string
       due:
@@ -601,4 +605,33 @@ paths:
       summary: '"Create Todo"'
       tags:
       - Todo
+  /users:
+    get:
+      consumes:
+      - application/json
+      description: Get all user names
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dtos.SuccessResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/dtos.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dtos.ErrorResponse'
+      summary: '"Get User Names"'
+      tags:
+      - User
 swagger: "2.0"
